examples/errors/Scratch1.nuscr
//http://sandbox.kidstrythisathome.com/erdos/






global protocol Proto1(role C, role S)
{
  rec X
  {
    1() from C to S;
    choice at C
    {
      2(Int) from C to S;
      3(Int) from S to C;
      continue X;
    }
    or
    {
      4a() from C to S;
      4b() from C to S;
    }
    or
    {
      4a() from C to S;  // Currently needs -minfsm
      4b() from C to S;
    }
  }
}

global protocol Proto2(role C, role S)
{
  1() from C to S;
  //2() from C to S;
  choice at C
  {
    3() from C to S;
    do Proto2(C, S);
  }
  or
  {
    2() from C to S;
  }
}

global protocol Proto3(role C, role S)
{
  rec X
  {
    1() from C to S;
    choice at C
    {
      2(Int) from C to S;
      3(Int) from S to C;
      continue X;
    }
    or
    {
      4() from C to S;
    }
  }
}